<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorpink">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/addemail"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_centerInParent="true"
        android:background="@color/colorblueskye">

        <TextView
            android:id="@+id/textemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30sp"
            android:text="@string/emailfogot" />

        <EditText
            android:id="@+id/sendemail"
            android:layout_width="150sp"
            android:layout_height="30sp"
            android:layout_below="@id/textemail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:background="@color/colorwhite" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sendemail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:text="@string/titleemail" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:text="@string/send" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/addkey"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_centerInParent="true"
        android:background="@color/colorblueskye">

        <TextView
            android:id="@+id/textkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30sp"
            android:text="@string/key" />

        <EditText
            android:id="@+id/edtkey"
            android:layout_width="150sp"
            android:layout_height="30sp"
            android:layout_below="@id/textkey"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:background="@color/colorwhite" />

        <Button
            android:id="@+id/sendkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtkey"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:text="@string/Ok" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/repass"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_centerInParent="true"
        android:background="@color/colorblueskye">
        <TextView
            android:textColor="@color/colorred"
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:text="@string/hint"
            />
        <TextView
            android:textColor="@color/colorred"
            android:id="@+id/pass"
            android:layout_below="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5sp"
            android:text="@string/addpass"
            />
        <EditText
            android:id="@+id/edtpass"
            android:layout_width="150sp"
            android:layout_height="30sp"
            android:layout_below="@id/pass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5sp"
            android:background="@color/colorwhite" />
        <TextView
            android:textColor="@color/colorred"
            android:id="@+id/txtrepass"
            android:layout_below="@+id/edtpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:text="@string/repass"
            />
        <EditText
            android:id="@+id/edtrepass"
            android:layout_width="150sp"
            android:layout_height="30sp"
            android:layout_below="@id/txtrepass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5sp"
            android:background="@color/colorwhite" />
        <Button
            android:id="@+id/sendpass"
            android:layout_width="60sp"
            android:layout_height="35sp"
            android:layout_below="@+id/edtrepass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5sp"
            android:text="@string/Ok" />
    </RelativeLayout>
</RelativeLayout>
</ScrollView>